--- a/public/durian/html/user/productCheckOut.html
+++ b/public/durian/html/user/productCheckOut.html
@@ -48,16 +48,16 @@ td {
 					<div class="table-responsive">
 						<table class="table table-sm p-0 border-top border-3">
 							<tr>
-								<th class="bg-light">이름</th>
-								<td>윤영민</td>
+								<th class="bg-light px-2">이름</th>
+								<td class="px-2">윤영민</td>
 							</tr>
 							<tr>
-								<th class="bg-light">이메일</th>
-								<td>yym2044@naver.com</td>
+								<th class="bg-light px-2">이메일</th>
+								<td class="px-2">yym2044@naver.com</td>
 							</tr>
 							<tr>
-								<th class="bg-light">휴대폰 번호</th>
-								<td>010-4635-6670</td>
+								<th class="bg-light px-2">휴대폰 번호</th>
+								<td class="px-2">010-4635-6670</td>
 							</tr>
 						</table>
 					</div>
@@ -71,20 +71,20 @@ td {
 					<div class="table-responsive">
 						<table class="table table-sm p-0 border-top border-3">
 							<tr>
-								<th class="bg-light">이름</th>
-								<td>윤영민 <span class="badge rounded-pill bg-primary">기본배송지</span></td>
+								<th class="bg-light px-2">이름</th>
+								<td class="px-2">윤영민 <span class="badge rounded-pill bg-primary">기본배송지</span></td>
 							</tr>
 							<tr>
-								<th class="bg-light">배송주소</th>
-								<td>경기도 남양주시 불암로 336</td>
+								<th class="bg-light px-2">배송주소</th>
+								<td class="px-2">경기도 남양주시 불암로 336</td>
 							</tr>
 							<tr>
-								<th class="bg-light">연락처</th>
-								<td>010-4635-6670</td>
+								<th class="bg-light px-2">연락처</th>
+								<td class="px-2">010-4635-6670</td>
 							</tr>
 							<tr>
-								<th class="bg-light">배송 요청사항</th>
-								<td>문 앞</td>
+								<th class="bg-light px-2">배송 요청사항</th>
+								<td class="px-2">문 앞</td>
 							</tr>
 						</table>
 					</div>
@@ -97,13 +97,13 @@ td {
 					<div class="table-responsive">
 						<table class="table table-sm p-0">
 							<tr>
-								<td colspan="2" class="bg-light">
+								<td colspan="2" class="bg-light px-2">
 									<span class="arrivalDate">내일(월) 3/28</span> 도착 보장
 								</td>
 							</tr>
 							<tr>
-								<td class="productName">언탭트 남성용 오버핏 스웨트 고중량 후드, XL, 블랙</td>
-								<td class="text-end">수량 1개 / 무료배송</td>
+								<td class="productName px-2">언탭트 남성용 오버핏 스웨트 고중량 후드, XL, 블랙</td>
+								<td class="text-end px-2" style="font-weight: lighter;">수량 1개 / 무료배송</td>
 							</tr>
 						</table>
 					</div>
@@ -116,28 +116,28 @@ td {
 					<div class="table-responsive">
 						<table class="table table-sm p-0 border-top border-3">
 							<tr>
-								<th class="bg-light">총상품가격</th>
-								<td>28,900원</td>
+								<th class="bg-light px-2">총상품가격</th>
+								<td class="px-2">28,900원</td>
 							</tr>
 							<tr>
-								<th class="bg-light">할인쿠폰</th>
-								<td>0원</td>
+								<th class="bg-light px-2">할인쿠폰</th>
+								<td class="px-2">0원</td>
 							</tr>
 							<tr>
-								<th class="bg-light">배송비</th>
-								<td>0원</td>
+								<th class="bg-light px-2">배송비</th>
+								<td class="px-2">0원</td>
 							</tr>
 							<tr>
-								<th class="bg-light">쿠팡캐시</th>
-								<td>0원</td>
+								<th class="bg-light px-2">쿠팡캐시</th>
+								<td class="px-2">0원</td>
 							</tr>
 							<tr>
-								<th class="bg-light">총결제금액</th>
-								<td>28,900원</td>
+								<th class="bg-light px-2">총결제금액</th>
+								<td class="px-2">28,900원</td>
 							</tr>
 							<tr>
-								<th class="bg-light">결제방법</th>
-								<td></td>
+								<th class="bg-light px-2">결제방법</th>
+								<td class="px-2"></td>
 							</tr>
 						</table>
 					</div>
