--- a/public/durian/html/user/productCheckOut.html
+++ b/public/durian/html/user/productCheckOut.html
@@ -63,16 +63,19 @@ td {
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="row py-3">
 				<p class="col-2 p-0 mb-0 fw-bold fs-5 d-inline">받는 사람 정보</p>
-				<button class="btn btn-primary" style="width:8%; font-size: x-small;">배송지변경</button>
+				<button class="btn btn-primary" style="width: 8%; font-size: x-small;">배송지변경</button>
 				<div class="col-12 p-0 pt-2">
 					<div class="table-responsive">
 						<table class="table table-sm p-0 border-top border-3">
 							<tr>
 								<th class="bg-light px-2">이름</th>
-								<td class="px-2">윤영민 <span class="badge rounded-pill bg-primary">기본배송지</span></td>
+								<td class="px-2">
+									윤영민
+									<span class="badge rounded-pill bg-primary">기본배송지</span>
+								</td>
 							</tr>
 							<tr>
 								<th class="bg-light px-2">배송주소</th>
@@ -90,7 +93,7 @@ td {
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="row py-3">
 				<p class="col-12 p-0 mb-0 fw-bold fs-5">배송 1건 중 1</p>
 				<div class="col p-0 pt-2">
@@ -98,7 +101,8 @@ td {
 						<table class="table table-sm p-0">
 							<tr>
 								<td colspan="2" class="bg-light px-2">
-									<span class="arrivalDate">내일(월) 3/28</span> 도착 보장
+									<span class="arrivalDate">내일(월) 3/28</span>
+									도착 보장
 								</td>
 							</tr>
 							<tr>
@@ -109,7 +113,7 @@ td {
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="row py-3">
 				<p class="col-12 p-0 mb-0 fw-bold fs-5">결제정보</p>
 				<div class="col p-0 pt-2">
@@ -143,11 +147,11 @@ td {
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="row">
 				<div class="col text-center">
-					<button class="btn btn-outline-danger" style="width: 200px; height:50px;">취소</button>				
-					<button class="btn btn-outline-primary" style="width: 200px; height:50px;">결제하기</button>				
+					<a class="lh-lg btn btn-outline-danger" href="javascript:history.back();" style="width: 200px;">취소</a>
+					<a class="lh-lg btn btn-outline-primary" style="width: 200px;">결제하기</a>
 				</div>
 			</div>
 		</div>
