--- a/public/durian/html/user/productView.html
+++ b/public/durian/html/user/productView.html
@@ -195,12 +195,14 @@
 							<input class="form-control" type="number" value="1" min="1" style="height: 38px;">
 						</div>
 						<div class="col px-1">
-							<a id="btnCart" class="btn btn-info w-100 rounded-0 text-white" data-bs-placement="top" data-bs-content="
+							<a tabindex="0" id="btnCart" class="btn btn-info w-100 rounded-0 text-white" data-bs-toggle="popover" data-bs-html="true" data-bs-placement="top" data-bs-trigger="focus" data-bs-content="
+							<!-- 
 							<div class='row p-0'>
 								<div class='col text-end'>
 									<a id='closePop' type='button' class='btn-close btn-lg' data-dismiss='popover'></a>
 								</div>
 							</div>
+							 -->
 							<div class='row p-3 text-center'>
 								<div class='col pb-3'>상품이 장바구니에 담겼습니다.</div>
 								<a class='btn btn-outline-primary' href='#'>장바구니 바로가기 ></a>
@@ -535,19 +537,18 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script type="text/javascript">
-		$(document).ready(function() {
-			$("#btnCart").popover({
-				html : true,
-				trigger : "click"
-			});
+
+
+		var popoverTriggerList = [].slice.call(document
+				.querySelectorAll('[data-bs-toggle="popover"]'))
+		var popoverList = popoverTriggerList.map(function(popoverTriggerEl) {
+			return new bootstrap.Popover(popoverTriggerEl)
 		})
-		
-		$("#closePop").on("click", function(){
-			$("#btnCart").popover({
-				trigger : "click"
-			});
+
+		var popover = new bootstrap.Popover(document
+				.querySelector('.popover-dismiss'), {
+			trigger : 'focus'
 		})
-		
 	</script>
 
 </body>
