--- a/public/durian/html/user/cartGeneral.html
+++ b/public/durian/html/user/cartGeneral.html
@@ -11,14 +11,10 @@
 
 <style type="text/css">
 th {
-	width: 20%;
-	text-align: right;
 	vertical-align: middle;
 }
 
 td {
-	height: 50px;
-	text-align: left;
 	vertical-align: middle;
 }
 </style>
@@ -55,16 +51,38 @@ td {
 					<div class="table-responsive">
 						<table class="table table-sm p-0 border-top border-3">
 							<tr>
-								<th class="bg-light px-2">이름</th>
-								<td class="px-2">윤영민</td>
+								<th colspan="2" class="bg-light text-start px-3"><input type="checkbox"></th>
+								<th class="bg-light px-2">상품정보</th>
+								<th class="bg-light px-2" style="width: 89px;">상품금액</th>
+								<th class="bg-light px-2" style="width: 88px;">배송비</th>
 							</tr>
-							<tr>
-								<th class="bg-light px-2">이메일</th>
-								<td class="px-2">yym2044@naver.com</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">휴대폰 번호</th>
-								<td class="px-2">010-4635-6670</td>
+							<tr style="height: 120px;">
+								<td class="px-3 text-start" style="width:50px;"><input type="checkbox"></td>
+								<td class="px-2" style="width:94px;"><img src="../../images/user/mainPage/product/randomProduct4.jpg" style="width: 78px;"></td>
+								<td class="px-2">
+									<div class="row">
+										<div class="col-12 text-start border-bottom pb-2">
+											<a class="m-0 text-muted fw-bold" style="text-decoration: none;">언탭트 남성용 오버핏 스웨트 고중량 후드, XL, 블랙</a>
+										</div>
+										<div class="col-6 text-start pt-3">
+											<p class="m-0"><span class="arrivalDate fs-6 fw-light">내일(월) 3/28</span> 도착 보장</p>
+										</div>
+										<div class="col-3 text-end py-2">
+											<span class="fw-light">28,900원</span>
+											<select class="form-select d-inline w-50">
+												<option>1</option>
+												<option>2</option>
+												<option>3</option>
+											</select>
+										</div>
+										<div class="col-3 py-2">
+											<span class="fw-light">28,900원</span>
+											<button class="btn btn-outline-secondary">X</button>
+										</div>
+									</div>
+								</td>
+								<td class="px-2">28,900원</td>
+								<td class="px-2">무료</td>
 							</tr>
 						</table>
 					</div>
