--- a/public/durian/html/user/cartGeneral.html
+++ b/public/durian/html/user/cartGeneral.html
@@ -62,7 +62,7 @@ td {
 								<td class="px-2">
 									<div class="row">
 										<div class="col-12 text-start border-bottom pb-2">
-											<a class="m-0 text-muted fw-bold" style="text-decoration: none;">언탭트 남성용 오버핏 스웨트 고중량 후드, XL, 블랙</a>
+											<a class="m-0 text-muted fw-bold" style="text-decoration: none;" href="./productView.html">언탭트 남성용 오버핏 스웨트 고중량 후드, XL, 블랙</a>
 										</div>
 										<div class="col-6 text-start pt-3">
 											<p class="m-0"><span class="arrivalDate fs-6 fw-light">내일(월) 3/28</span> 도착 보장</p>
