--- a/public/durian/html/user/productView.html
+++ b/public/durian/html/user/productView.html
@@ -205,7 +205,7 @@
 							 -->
 							<div class='row p-3 text-center'>
 								<div class='col pb-3'>상품이 장바구니에 담겼습니다.</div>
-								<a class='btn btn-outline-primary' href='#'>장바구니 바로가기 ></a>
+								<a class='btn btn-outline-primary' href='./cartGeneral.html'>장바구니 바로가기 ></a>
 							</div>
 							">장바구니 담기</a>
 						</div>
