--- a/public/durian/html/user/cartGeneral.html
+++ b/public/durian/html/user/cartGeneral.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="../../css/style.css">
 <link rel="stylesheet" href="../../css/styleCoupang.css">
+<script src="https://kit.fontawesome.com/fbbc6db919.js" crossorigin="anonymous"></script>
 
 <style type="text/css">
 th {
@@ -51,21 +52,30 @@ td {
 					<div class="table-responsive">
 						<table class="table table-sm p-0 border-top border-3">
 							<tr>
-								<th colspan="2" class="bg-light text-start px-3"><input type="checkbox"></th>
+								<th colspan="2" class="bg-light text-start px-3">
+									<input type="checkbox">
+								</th>
 								<th class="bg-light px-2">상품정보</th>
 								<th class="bg-light px-2" style="width: 89px;">상품금액</th>
 								<th class="bg-light px-2" style="width: 88px;">배송비</th>
 							</tr>
 							<tr style="height: 120px;">
-								<td class="px-3 text-start" style="width:50px;"><input type="checkbox"></td>
-								<td class="px-2" style="width:94px;"><img src="../../images/user/mainPage/product/randomProduct4.jpg" style="width: 78px;"></td>
+								<td class="px-3 text-start" style="width: 50px;">
+									<input type="checkbox">
+								</td>
+								<td class="px-2" style="width: 94px;">
+									<img src="../../images/user/mainPage/product/randomProduct4.jpg" style="width: 78px;">
+								</td>
 								<td class="px-2">
 									<div class="row">
 										<div class="col-12 text-start border-bottom pb-2">
 											<a class="m-0 text-muted fw-bold" style="text-decoration: none;" href="./productView.html">언탭트 남성용 오버핏 스웨트 고중량 후드, XL, 블랙</a>
 										</div>
 										<div class="col-6 text-start pt-3">
-											<p class="m-0"><span class="arrivalDate fs-6 fw-light">내일(월) 3/28</span> 도착 보장</p>
+											<p class="m-0">
+												<span class="arrivalDate fs-6 fw-light">내일(월) 3/28</span>
+												도착 보장
+											</p>
 										</div>
 										<div class="col-3 text-end py-2">
 											<span class="fw-light">28,900원</span>
@@ -83,6 +93,53 @@ td {
 								</td>
 								<td class="px-2">28,900원</td>
 								<td class="px-2">무료</td>
+							</tr>
+							<tr style="height: 120px;">
+								<td class="px-3 text-start" style="width: 50px;">
+									<input type="checkbox">
+								</td>
+								<td class="px-2" style="width: 94px;">
+									<img src="../../images/user/mainPage/product/randomProduct16.jpg" style="width: 78px;">
+								</td>
+								<td class="px-2">
+									<div class="row">
+										<div class="col-12 text-start border-bottom pb-2">
+											<a class="m-0 text-muted fw-bold" style="text-decoration: none;" href="./productView.html"> 빅사이즈클럽 SG 오버핏 데일리 맨투맨, 4XL, 챠콜</a>
+										</div>
+										<div class="col-6 text-start pt-3">
+											<p class="m-0">
+												<span class="arrivalDate fs-6 fw-light">내일(월) 3/28</span>
+												도착 보장
+											</p>
+										</div>
+										<div class="col-3 text-end py-2">
+											<span class="fw-light">21,900원</span>
+											<select class="form-select d-inline w-50">
+												<option>1</option>
+												<option>2</option>
+												<option>3</option>
+											</select>
+										</div>
+										<div class="col-3 py-2">
+											<span class="fw-light">21,900원</span>
+											<button class="btn btn-outline-secondary">X</button>
+										</div>
+									</div>
+								</td>
+								<td class="px-2">21,900원</td>
+								<td class="px-2">무료</td>
+							</tr>
+							<tr>
+								<td colspan="5" class="bg-light text-end p-3">
+									상품가격
+									<span class="fs-5">50,800</span>원
+									<button class="rounded-pill"><i class="fa-solid fa-plus"></i></button>
+									배송비
+									<span class="fs-5">무료</span>
+									<button class="rounded-pill"><i class="fa-solid fa-equals"></i></button>
+									주문금액
+									<span class="fs-5 fw-bold">50,800</span>원
+								</td>
 							</tr>
 						</table>
 					</div>
