--- a/public/durian/html/user/cartWishlist.html
+++ b/public/durian/html/user/cartWishlist.html
@@ -11,14 +11,10 @@
 
 <style type="text/css">
 th {
-	width: 20%;
-	text-align: right;
 	vertical-align: middle;
 }
 
 td {
-	height: 50px;
-	text-align: left;
 	vertical-align: middle;
 }
 </style>
@@ -51,32 +47,41 @@ td {
 			</div>
 
 			<div class="row py-3">
-				<p class="col-12 p-0 mb-0 fw-bold fs-5">구매자 정보</p>
 				<div class="col p-0 pt-2">
 					<div class="table-responsive">
 						<table class="table table-sm p-0 border-top border-3">
 							<tr>
-								<th class="bg-light px-2">이름</th>
-								<td class="px-2">윤영민</td>
+								<th colspan="4" class="bg-light text-start px-3">
+									<input type="checkbox">
+								</th>
 							</tr>
-							<tr>
-								<th class="bg-light px-2">이메일</th>
-								<td class="px-2">yym2044@naver.com</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">휴대폰 번호</th>
-								<td class="px-2">010-4635-6670</td>
+							<tr style="height: 120px;">
+								<td class="px-3 text-start" style="width: 50px;">
+									<input type="checkbox">
+								</td>
+								<td class="px-2" style="width: 94px;">
+									<img src="../../images/user/mainPage/product/randomProduct17.jpg" style="width: 78px;">
+								</td>
+								<td class="px-2">
+									<div class="row">
+										<div class="col-12 text-start pb-1 fw-light" style="font-size: small;">
+											무료배송
+										</div>
+										<div class="col-12 text-start pb-2">
+											<a class="m-0 text-muted fw-bold" style="text-decoration: none;" href="./productView.html">참나린 2022 설선물세트 견과류세트, 3호견과류선물세트(아몬드/크렌베리/호두)</a>
+										</div>
+										<div class="col-12 text-start pb-2 fw-bold text-danger">
+											19,900원
+										</div>
+									</div>
+								</td>
+								<td class="px-2">
+									<button class="btn btn-outline-primary w-100 mb-1">장바구니 담기</button>
+									<button class="btn btn-outline-danger w-100">삭제</button>
+								</td>
 							</tr>
 						</table>
 					</div>
-				</div>
-			</div>
-
-
-			<div class="row">
-				<div class="col text-center">
-					<a class="lh-lg btn btn-outline-danger" href="javascript:history.back();" style="width: 200px;">계속 쇼핑하기</a>
-					<a class="lh-lg btn btn-outline-primary" style="width: 200px;">구매하기</a>
 				</div>
 			</div>
 		</div>
