--- a/public/durian/html/user/productCheckOut2.html
+++ b/public/durian/html/user/productCheckOut2.html
@@ -11,13 +11,12 @@
 
 <style type="text/css">
 th {
-	width: 20%;
-	text-align: right;
+	width: 30%;
+	text-align: left;
 	vertical-align: middle;
 }
 
 td {
-	height: 50px;
 	text-align: left;
 	vertical-align: middle;
 }
@@ -37,121 +36,76 @@ td {
 		<div class="width65">
 			<div class="row border-bottom border-4 py-2 mt-2 align-items-end">
 				<div class="col p-0">
-					<h2>주문/결제</h2>
+					<h2>주문완료</h2>
 				</div>
 				<div class="col text-end p-0">주문결제>주문완료</div>
 			</div>
 
 			<div class="row py-3">
-				<p class="col-12 p-0 mb-0 fw-bold fs-5">구매자 정보</p>
 				<div class="col p-0 pt-2">
-					<div class="table-responsive">
-						<table class="table table-sm p-0 border-top border-3">
-							<tr>
-								<th class="bg-light px-2">이름</th>
-								<td class="px-2">윤영민</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">이메일</th>
-								<td class="px-2">yym2044@naver.com</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">휴대폰 번호</th>
-								<td class="px-2">010-4635-6670</td>
-							</tr>
-						</table>
-					</div>
+					주문이 완료되었습니다. 주문일 2022-03-28 주문번호 112312112
+					<button class="btn btn-outline-primary">계속 쇼핑하기</button>
 				</div>
 			</div>
 
 			<div class="row py-3">
-				<p class="col-2 p-0 mb-0 fw-bold fs-5 d-inline">받는 사람 정보</p>
-				<button class="btn btn-primary" style="width: 8%; font-size: x-small;">배송지변경</button>
-				<div class="col-12 p-0 pt-2">
-					<div class="table-responsive">
-						<table class="table table-sm p-0 border-top border-3">
-							<tr>
-								<th class="bg-light px-2">이름</th>
-								<td class="px-2">
-									윤영민
-									<span class="badge rounded-pill bg-primary">기본배송지</span>
-								</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">배송주소</th>
-								<td class="px-2">경기도 남양주시 불암로 336</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">연락처</th>
-								<td class="px-2">010-4635-6670</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">배송 요청사항</th>
-								<td class="px-2">문 앞</td>
-							</tr>
-						</table>
+				<div class="col-6">
+					<p class="col-2 p-0 mb-0 fw-bold fs-5 d-inline">받는 사람 정보</p>
+					<div class="col-12 p-0 pt-2">
+						<div class="table-responsive">
+							<table class="table table-sm bg-light">
+								<tr>
+									<th class="bg-light px-2">이름</th>
+									<td class="px-2">윤영민</td>
+								</tr>
+								<tr>
+									<th class="bg-light px-2">휴대폰</th>
+									<td class="px-2">010-4635-6670</td>
+								</tr>
+								<tr>
+									<th class="bg-light px-2">연락처</th>
+									<td class="px-2">031-123-4567</td>
+								</tr>
+								<tr>
+									<th class="bg-light px-2">배송주소</th>
+									<td class="px-2">경기도 남양주시 불암로 336</td>
+								</tr>
+								<tr>
+									<th class="bg-light px-2">배송 요청사항</th>
+									<td class="px-2">문 앞</td>
+								</tr>
+							</table>
+						</div>
 					</div>
 				</div>
-			</div>
-
-			<div class="row py-3">
-				<p class="col-12 p-0 mb-0 fw-bold fs-5">배송 1건 중 1</p>
-				<div class="col p-0 pt-2">
-					<div class="table-responsive">
-						<table class="table table-sm p-0">
-							<tr>
-								<td colspan="2" class="bg-light px-2">
-									<span class="arrivalDate">내일(월) 3/28</span>
-									도착 보장
-								</td>
-							</tr>
-							<tr>
-								<td class="productName px-2">언탭트 남성용 오버핏 스웨트 고중량 후드, XL, 블랙</td>
-								<td class="text-end px-2" style="font-weight: lighter;">수량 1개 / 무료배송</td>
-							</tr>
-						</table>
+				<div class="col-6">
+					<p class="col-12 p-0 mb-0 fw-bold fs-5">결제정보</p>
+					<div class="col p-0 pt-2">
+						<div class="table-responsive">
+							<table class="table table-sm p-0 bg-light">
+								<tr>
+									<th class="bg-light px-2">주문금액</th>
+									<td class="px-2">28,900원</td>
+								</tr>
+								<tr>
+									<th class="bg-light px-2">쿠폰할인</th>
+									<td class="px-2">0원</td>
+								</tr>
+								<tr>
+									<th class="bg-light px-2">쿠팡캐시</th>
+									<td class="px-2">0원</td>
+								</tr>
+								<tr>
+									<th class="bg-light px-2">배송비</th>
+									<td class="px-2">0원</td>
+								</tr>
+								<tr>
+									<th class="bg-light px-2">총결제금액</th>
+									<td class="px-2">28,900원</td>
+								</tr>
+							</table>
+						</div>
 					</div>
-				</div>
-			</div>
-
-			<div class="row py-3">
-				<p class="col-12 p-0 mb-0 fw-bold fs-5">결제정보</p>
-				<div class="col p-0 pt-2">
-					<div class="table-responsive">
-						<table class="table table-sm p-0 border-top border-3">
-							<tr>
-								<th class="bg-light px-2">총상품가격</th>
-								<td class="px-2">28,900원</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">할인쿠폰</th>
-								<td class="px-2">0원</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">배송비</th>
-								<td class="px-2">0원</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">쿠팡캐시</th>
-								<td class="px-2">0원</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">총결제금액</th>
-								<td class="px-2">28,900원</td>
-							</tr>
-							<tr>
-								<th class="bg-light px-2">결제방법</th>
-								<td class="px-2"></td>
-							</tr>
-						</table>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col text-center">
-					<a class="lh-lg btn btn-outline-danger" href="javascript:history.back();" style="width: 200px;">취소</a>
-					<a class="lh-lg btn btn-outline-primary" style="width: 200px;">결제하기</a>
 				</div>
 			</div>
 		</div>
