--- a/public/durian/html/user/productCheckOut2.html
+++ b/public/durian/html/user/productCheckOut2.html
@@ -41,19 +41,24 @@ td {
 				<div class="col text-end p-0">주문결제>주문완료</div>
 			</div>
 
-			<div class="row py-3">
-				<div class="col p-0 pt-2">
-					주문이 완료되었습니다. 주문일 2022-03-28 주문번호 112312112
-					<button class="btn btn-outline-primary">계속 쇼핑하기</button>
+			<div class="row border-bottom border-4 py-5 text-center">
+				<div class="col-12 p-0 pt-2 fs-4 fw-bold">
+					주문이 완료되었습니다.
+				</div>
+				<div class="col-12 p-0 pt-2 mb-4 fw-bold" style="font-size: x-small;">
+					주문일 2022-03-28 | 주문번호 112312112
+				</div>
+				<div class="col-12 p-0 pt-2">
+					<button class="btn btn-outline-primary rounded-0">계속 쇼핑하기</button>
 				</div>
 			</div>
 
 			<div class="row py-3">
 				<div class="col-6">
-					<p class="col-2 p-0 mb-0 fw-bold fs-5 d-inline">받는 사람 정보</p>
+					<p class="col-2 p-0 mb-0 fw-bold fs-4 text-muted d-inline">받는 사람 정보</p>
 					<div class="col-12 p-0 pt-2">
-						<div class="table-responsive">
-							<table class="table table-sm bg-light">
+						<div class="table-responsive px-3 py-4 bg-light">
+							<table class="table table-sm table-borderless">
 								<tr>
 									<th class="bg-light px-2">이름</th>
 									<td class="px-2">윤영민</td>
@@ -79,29 +84,29 @@ td {
 					</div>
 				</div>
 				<div class="col-6">
-					<p class="col-12 p-0 mb-0 fw-bold fs-5">결제정보</p>
+					<p class="col-12 p-0 mb-0 fw-bold text-muted fs-4">결제정보</p>
 					<div class="col p-0 pt-2">
-						<div class="table-responsive">
-							<table class="table table-sm p-0 bg-light">
+						<div class="table-responsive px-3 py-4 bg-light">
+							<table class="table table-sm p-0 table-borderless">
 								<tr>
 									<th class="bg-light px-2">주문금액</th>
-									<td class="px-2">28,900원</td>
+									<td class="px-2 text-end">28,900원</td>
 								</tr>
 								<tr>
 									<th class="bg-light px-2">쿠폰할인</th>
-									<td class="px-2">0원</td>
+									<td class="px-2 text-end">0원</td>
 								</tr>
 								<tr>
 									<th class="bg-light px-2">쿠팡캐시</th>
-									<td class="px-2">0원</td>
+									<td class="px-2 text-end">0원</td>
 								</tr>
 								<tr>
 									<th class="bg-light px-2">배송비</th>
-									<td class="px-2">0원</td>
+									<td class="px-2 text-end">0원</td>
 								</tr>
 								<tr>
 									<th class="bg-light px-2">총결제금액</th>
-									<td class="px-2">28,900원</td>
+									<td class="px-2 text-end">28,900원</td>
 								</tr>
 							</table>
 						</div>
