--- a/public/durian/html/user/cartGeneral.html
+++ b/public/durian/html/user/cartGeneral.html
@@ -27,7 +27,7 @@ td {
 
 		<div class="row border-bottom py-3 pt-4">
 			<div class="col offset-2">
-				<img src="../../images/user/mainPage/coupang2.png" style="width: 175px;">
+				<a href="./mainPage.html"><img src="../../images/user/mainPage/coupang2.png" style="width: 175px;"></a>
 			</div>
 		</div>
 
