--- a/public/durian/html/user/productCheckOut.html
+++ b/public/durian/html/user/productCheckOut.html
@@ -150,8 +150,8 @@ td {
 
 			<div class="row">
 				<div class="col text-center">
-					<a class="lh-lg btn btn-outline-danger" href="javascript:history.back();" style="width: 200px;">취소</a>
-					<a class="lh-lg btn btn-outline-primary" style="width: 200px;">결제하기</a>
+					<a class="lh-lg btn btn-outline-danger rounded-0" href="javascript:history.back();" style="width: 200px;">취소</a>
+					<a class="lh-lg btn btn-outline-primary rounded-0" href="./productCheckOut2.html" style="width: 200px;">결제하기</a>
 				</div>
 			</div>
 		</div>
