--- a/public/durian/html/user/productCheckOut2.html
+++ b/public/durian/html/user/productCheckOut2.html
@@ -49,7 +49,7 @@ td {
 					주문일 2022-03-28 | 주문번호 112312112
 				</div>
 				<div class="col-12 p-0 pt-2">
-					<button class="btn btn-outline-primary rounded-0">계속 쇼핑하기</button>
+					<a class="btn btn-outline-primary rounded-0" href="./mainPage.html">계속 쇼핑하기</a>
 				</div>
 			</div>
 
