--- a/public/durian/html/user/productView.html
+++ b/public/durian/html/user/productView.html
@@ -46,7 +46,7 @@
 				<ul class="nav">
 					<li class="nav-item dropdown"><a class="nav-link link-light dropdown-toggle p-0" href="#">
 							<!-- data-bs-toggle="dropdown" -->
-							<button class="btn btn-primary btn-lg" style="width: 110px; height: 115px;">
+							<button class="btn btn-primary btn-lg rounded-0" style="width: 110px; height: 115px;">
 								<i class="bi bi-list fs-2"></i>
 								<div class="btnText">카테고리</div>
 							</button>
