--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -57,6 +57,9 @@
 							<li><a class="dropdown-item" href="#">패션의류/잡화</a></li>
 							<li><a class="dropdown-item" href="#">뷰티</a></li>
 							<li><a class="dropdown-item" href="#">식품</a></li>
+							<li><a class="dropdown-item" href="#">주방용품</a></li>
+							<li><a class="dropdown-item" href="#">생활용품</a></li>
+							<li><a class="dropdown-item" href="#">문구/취미</a></li>
 						</ul></li>
 				</ul>
 
