--- a/public/durian/html/user/cartGeneral.html
+++ b/public/durian/html/user/cartGeneral.html
@@ -151,7 +151,7 @@ td {
 			<div class="row">
 				<div class="col text-center">
 					<a class="lh-lg btn btn-outline-danger" href="javascript:history.back();" style="width: 200px;">계속 쇼핑하기</a>
-					<a class="lh-lg btn btn-outline-primary" style="width: 200px;">구매하기</a>
+					<a href="./productCheckOut2.html" class="lh-lg btn btn-outline-primary" style="width: 200px;">구매하기</a>
 				</div>
 			</div>
 		</div>
